--- a/PDFcreator/app.ipynb
+++ b/PDFcreator/app.ipynb
@@ -14,11 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# mainの処理\n",
+    "# TODO:日本語の改行を適切に行う、qrコードのgenerative AIで、ロゴを追加\n",
     "import qrcode\n",
     "import random, json\n",
     "\n",
@@ -53,7 +54,7 @@
     "url_path = \"./image/qr.png\"\n",
     "backgpund_path = \"./image/material_201006_01_white.png\"\n",
     "backgpund_rote_path = \"./image/material_201006_01_white_rotate.png\"\n",
-    "\n",
+    "logo_url = \"./image/loho.png\"\n",
     "\n",
     "# フォントの登録\n",
     "pdfmetrics.registerFont(TTFont(\"HGRGE\", \"C:/Windows/Fonts/HGRGE.TTC\"))\n",
@@ -116,7 +117,7 @@
     "\n",
     "story.append(Paragraph(exhibition_name, get_style(\"HGRGE\", 30, 30)))\n",
     "\n",
-    "story.append(Spacer(1, 20))\n",
+    "story.append(Spacer(1, 30))\n",
     "\n",
     "story.append(Paragraph(exhibition_description, get_style(\"HGRGE\", 10, 15)))\n",
     "\n",
@@ -160,6 +161,7 @@
     "    story.append(Spacer(1, 20))\n",
     "    story.append(Paragraph(\"ご来場お待ちしております。\", centered_style))\n",
     "\n",
+    "# story.append(Image(logo_url, width=100, height=100))\n",
     "\n",
     "# ドキュメントに追加\n",
     "doc.build(story, onFirstPage=background_image, onLaterPages=background_image)\n"
@@ -167,22 +169,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "691.8897637795277"
-      ]
-     },
-     "execution_count": 169,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['特別展', '「海の', '祈り－海浜の', '神社と', '伊勢神宮－」']\n"
+     ]
     }
    ],
    "source": [
-    "A4[1] - 150"
+    "# ! pip install budoux\n",
+    "import budoux\n",
+    "parser = budoux.load_default_japanese_parser()\n",
+    "print(parser.parse(exhibition_name))"
    ]
   },
   {
@@ -629,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
