--- a/PDFcreator/app.ipynb
+++ b/PDFcreator/app.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "\n",
     "from reportlab.lib.pagesizes import A4\n",
     "from reportlab.lib.styles import getSampleStyleSheet, ParagraphStyle\n",
-    "from reportlab.platypus import SimpleDocTemplate, BaseDocTemplate, PageTemplate, Frame, Paragraph, Flowable, Spacer, Image\n",
+    "from reportlab.platypus import SimpleDocTemplate, Paragraph, Spacer, Image\n",
     "from reportlab.lib.enums import TA_CENTER\n",
     "from reportlab.pdfbase import pdfmetrics\n",
     "from reportlab.pdfbase.ttfonts import TTFont\n",
@@ -48,6 +48,7 @@
     "\n",
     "museum_name = text_ex[0]\n",
     "exhibition_name = text_ex[2]\n",
+    "\n",
     "exhibition_description = text_ex[6]\n",
     "url = text_ex[5]\n",
     "\n",
@@ -176,15 +177,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['特別展', '「海の', '祈り－海浜の', '神社と', '伊勢神宮－」']\n"
+      "島国である我が国において、人やモノ、文化などの交流、移動は、古くから海路を介することで\n",
+      "行われていました。海路による交流や移動は、私たちの想像を超える困難を伴うものであった\n",
+      "ことは、さまざまな歴史資料などからも想像するに難くありません。世界遺産「神宿る島」宗像\n",
+      "（むなかた）・沖ノ島と関連遺産群や八代（やつしろ）神社（三重県鳥羽市）\n",
+      "「伊勢神島祭祀遺物」などに見られるように、人々が航海の無事や安全などを神々に\n",
+      "祈願していたことは自然な流れでしょう。　この特別展では、これらの遺産や遺物をはじめ、\n",
+      "明治時代初めまで行われていた伊勢神宮の贄海神事（にえうみしんじ）に関する資料などから\n",
+      "人知の及ばぬ存在に対する畏怖や地域の歴史、神々への日々の安寧を願う想い、感謝の気持ちを\n",
+      "表す祭祀や風習などを紹介します。\n"
      ]
     }
    ],
    "source": [
+    "# 参考：https://zenn.dev/micchi/articles/e0a584deeced0a\n",
     "# ! pip install budoux\n",
     "import budoux\n",
+    "\n",
     "parser = budoux.load_default_japanese_parser()\n",
-    "print(parser.parse(exhibition_name))"
+    "\n",
+    "text = parser.parse(exhibition_description)\n",
+    "\n",
+    "# max_length以下の文字数で分割\n",
+    "def combine_elements_until_max_length(data, max_length):\n",
+    "    if not data:\n",
+    "        return []\n",
+    "\n",
+    "    combined_list = []\n",
+    "    current_string = \"\"\n",
+    "\n",
+    "    for item in data:\n",
+    "        if len(current_string + item) <= max_length:\n",
+    "            current_string += item\n",
+    "        else:\n",
+    "            combined_list.append(current_string)\n",
+    "            current_string = item\n",
+    "\n",
+    "    # 最後のcurrent_stringをリストに追加\n",
+    "    if current_string:\n",
+    "        combined_list.append(current_string)\n",
+    "\n",
+    "    return combined_list\n",
+    "\n",
+    "\n",
+    "# 使用例\n",
+    "result = combine_elements_until_max_length(text, 43)\n",
+    "print(\"\\n\".join(result))"
    ]
   },
   {
