add logo to PDF

--- a/PDFcreator/app.ipynb
+++ b/PDFcreator/app.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
     "url_path = \"./image/qr.png\"\n",
     "backgpund_path = \"./image/material_201006_01_white.png\"\n",
     "backgpund_rote_path = \"./image/material_201006_01_white_rotate.png\"\n",
-    "logo_url = \"./image/loho.png\"\n",
+    "logo_url = \"./image/logo.png\"\n",
     "\n",
     "# フォントの登録\n",
     "pdfmetrics.registerFont(TTFont(\"HGRGE\", \"C:/Windows/Fonts/HGRGE.TTC\"))\n",
@@ -91,19 +91,28 @@
     "    canvas.drawImage(backgpund_path, 0, 0, width=img_width, height=img_height)\n",
     "    canvas.restoreState()\n",
     "\n",
-    "    # # 右上\n",
+    "    # 右上\n",
     "    canvas.saveState()\n",
     "    canvas.translate(A4[0] - img_width, A4[1])\n",
     "    canvas.rotate(-90)\n",
     "    canvas.drawImage(backgpund_path, 0, 0, width=img_width, height=img_height)\n",
     "    canvas.restoreState()\n",
     "\n",
-    "    # # 右下\n",
+    "    # 右下\n",
     "    canvas.saveState()\n",
     "    canvas.translate(A4[0], img_width)\n",
     "    canvas.rotate(180)\n",
     "    canvas.drawImage(backgpund_path, 0, 0, width=img_width, height=img_height)\n",
     "    canvas.restoreState()\n",
+    "\n",
+    "\n",
+    "    # logoの配置\n",
+    "    # どこに配置するかは考える必要がある\n",
+    "    canvas.saveState()\n",
+    "    canvas.translate(0, 0)\n",
+    "    canvas.drawImage(logo_url, (A4[0]-58.26*3) // 2, 10, width=58.26*3, height=28.74*3)\n",
+    "    canvas.restoreState()\n",
+    "\n",
     "\n",
     "story = []\n",
     "doc = SimpleDocTemplate(\"sample.pdf\", pagesize=A4)\n",
@@ -152,6 +161,7 @@
     "    story.append(Paragraph(\"当選番号は入場時に提示してください。\", centered_style))\n",
     "    story.append(Spacer(1, 10))\n",
     "    story.append(Paragraph(\"ご来場お待ちしております。\", centered_style))\n",
+    "    story.append(Spacer(1, 20))\n",
     "    hit_count += 1\n",
     "    with open(\"./hit_count.json\", \"w\") as f:\n",
     "        json.dump({\"count\": hit_count}, f)\n",
@@ -161,8 +171,9 @@
     "    story.append(Paragraph(\"あなたは残念賞です。\", centered_style))\n",
     "    story.append(Spacer(1, 20))\n",
     "    story.append(Paragraph(\"ご来場お待ちしております。\", centered_style))\n",
+    "    story.append(Spacer(1, 20))\n",
     "\n",
-    "# story.append(Image(logo_url, width=100, height=100))\n",
+    "\n",
     "\n",
     "# ドキュメントに追加\n",
     "doc.build(story, onFirstPage=background_image, onLaterPages=background_image)\n"
