--- a/PDFcreator/app.ipynb
+++ b/PDFcreator/app.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "import qrcode\n",
     "import random, json\n",
     "\n",
-    "from reportlab.lib.pagesizes import A4\n",
+    "from reportlab.lib.pagesizes import B5\n",
     "from reportlab.lib.styles import getSampleStyleSheet, ParagraphStyle\n",
     "from reportlab.platypus import SimpleDocTemplate, Paragraph, Spacer, Image\n",
     "from reportlab.lib.enums import TA_CENTER\n",
@@ -33,7 +33,6 @@
     "\n",
     "from PIL import Image as PILImage\n",
     "\n",
-    "from reportlab.lib.pagesizes import A4, portrait\n",
     "\n",
     "with open(\"./hit_count.json\", \"r\") as f:\n",
     "    hit_count = json.load(f)[\"count\"]\n",
@@ -57,9 +56,12 @@
     "backgpund_rote_path = \"./image/material_201006_01_white_rotate.png\"\n",
     "logo_url = \"./image/logo.png\"\n",
     "\n",
+    "font_name = \"genshingothic\"\n",
+    "font_path = \"./font/genshingothic-20150607/GenShinGothic-Normal.ttf\"\n",
+    "\n",
+    "\n",
     "# フォントの登録\n",
-    "pdfmetrics.registerFont(TTFont(\"HGRGE\", \"C:/Windows/Fonts/HGRGE.TTC\"))\n",
-    "pdfmetrics.registerFont(TTFont(\"HGRME\", \"C:/Windows/Fonts/HGRME.TTC\"))\n",
+    "pdfmetrics.registerFont(TTFont(font_name, font_path))\n",
     "\n",
     "# スタイルの取得\n",
     "styles = getSampleStyleSheet()\n",
@@ -74,12 +76,12 @@
     "    )\n",
     "\n",
     "def background_image(canvas, doc):\n",
-    "    img_width, img_height = 150, 150\n",
+    "    img_width, img_height = 100, 100\n",
     "    # translateとrotateの関係で、左上、左下、右上、右下の順に画像を配置する\n",
     "\n",
     "    # 左上\n",
     "    canvas.saveState()\n",
-    "    canvas.translate(0, A4[1] - img_height)\n",
+    "    canvas.translate(0, B5[1] - img_height)\n",
     "    canvas.rotate(0)\n",
     "    canvas.drawImage(backgpund_path, 0, 0, width=img_width, height=img_height)\n",
     "    canvas.restoreState()\n",
@@ -93,14 +95,14 @@
     "\n",
     "    # 右上\n",
     "    canvas.saveState()\n",
-    "    canvas.translate(A4[0] - img_width, A4[1])\n",
+    "    canvas.translate(B5[0] - img_width, B5[1])\n",
     "    canvas.rotate(-90)\n",
     "    canvas.drawImage(backgpund_path, 0, 0, width=img_width, height=img_height)\n",
     "    canvas.restoreState()\n",
     "\n",
     "    # 右下\n",
     "    canvas.saveState()\n",
-    "    canvas.translate(A4[0], img_width)\n",
+    "    canvas.translate(B5[0], img_width)\n",
     "    canvas.rotate(180)\n",
     "    canvas.drawImage(backgpund_path, 0, 0, width=img_width, height=img_height)\n",
     "    canvas.restoreState()\n",
@@ -110,26 +112,26 @@
     "    # どこに配置するかは考える必要がある\n",
     "    canvas.saveState()\n",
     "    canvas.translate(0, 0)\n",
-    "    canvas.drawImage(logo_url, (A4[0]-58.26*3) // 2, 10, width=58.26*3, height=28.74*3)\n",
+    "    canvas.drawImage(logo_url, (B5[0]-58.26*3) // 2, 10, width=58.26*3, height=28.74*3)\n",
     "    canvas.restoreState()\n",
     "\n",
     "\n",
     "story = []\n",
-    "doc = SimpleDocTemplate(\"sample.pdf\", pagesize=A4)\n",
+    "doc = SimpleDocTemplate(\"sample.pdf\", pagesize=B5)\n",
     "\n",
-    "story.append(Paragraph(\"あなたへのおすすめは...\", get_style(\"HGRGE\", 20, 20)))\n",
+    "story.append(Paragraph(\"あなたへのおすすめは...\", get_style(font_name, 20, 20)))\n",
     "\n",
     "story.append(Spacer(1, 20))\n",
     "\n",
-    "story.append(Paragraph(museum_name, get_style(\"HGRGE\", 30, 30)))\n",
+    "story.append(Paragraph(museum_name, get_style(font_name, 30, 30)))\n",
     "\n",
     "story.append(Spacer(1, 40))\n",
     "\n",
-    "story.append(Paragraph(exhibition_name, get_style(\"HGRGE\", 30, 30)))\n",
+    "story.append(Paragraph(exhibition_name, get_style(font_name, 30, 30)))\n",
     "\n",
     "story.append(Spacer(1, 30))\n",
     "\n",
-    "story.append(Paragraph(exhibition_description, get_style(\"HGRGE\", 10, 15)))\n",
+    "story.append(Paragraph(exhibition_description, get_style(font_name, 10, 15)))\n",
     "\n",
     "story.append(Spacer(1, 20))\n",
     "\n",
@@ -148,30 +150,32 @@
     "story.append(Spacer(1, 40))\n",
     "\n",
     "\n",
-    "centered_style = get_style(\"HGRGE\", 20, 20)\n",
+    "centered_style = get_style(font_name, 20, 20)\n",
     "\n",
     "# 当選機能の設定\n",
     "if random.random() < probability and hit_count < max_hit:\n",
-    "    story.append(Paragraph(\"おめでとうございます！\", centered_style))\n",
-    "    story.append(Spacer(1, 10))\n",
-    "    story.append(Paragraph(\"あなたは当選しました！\", centered_style))\n",
-    "    story.append(Spacer(1, 10))\n",
-    "    story.append(Paragraph(\"当選番号は\" + str(random.randint(1, max_hit)) + \"番です！\", centered_style))\n",
-    "    story.append(Spacer(1, 10))\n",
-    "    story.append(Paragraph(\"当選番号は入場時に提示してください。\", centered_style))\n",
-    "    story.append(Spacer(1, 10))\n",
-    "    story.append(Paragraph(\"ご来場お待ちしております。\", centered_style))\n",
-    "    story.append(Spacer(1, 20))\n",
+    "    # 当たりの場合はスタンプを押す\n",
+    "    # story.append(Paragraph(\"おめでとうございます！\", centered_style))\n",
+    "    # story.append(Spacer(1, 10))\n",
+    "    # story.append(Paragraph(\"あなたは当選しました！\", centered_style))\n",
+    "    # story.append(Spacer(1, 10))\n",
+    "    # story.append(Paragraph(\"当選番号は\" + str(random.randint(1, max_hit)) + \"番です！\", centered_style))\n",
+    "    # story.append(Spacer(1, 10))\n",
+    "    # story.append(Paragraph(\"当選番号は入場時に提示してください。\", centered_style))\n",
+    "    # story.append(Spacer(1, 10))\n",
+    "    # story.append(Paragraph(\"ご来場お待ちしております。\", centered_style))\n",
+    "    # story.append(Spacer(1, 20))\n",
     "    hit_count += 1\n",
     "    with open(\"./hit_count.json\", \"w\") as f:\n",
     "        json.dump({\"count\": hit_count}, f)\n",
     "else:\n",
-    "    story.append(Paragraph(\"残念でした...\", centered_style))\n",
-    "    story.append(Spacer(1, 20))\n",
-    "    story.append(Paragraph(\"あなたは残念賞です。\", centered_style))\n",
-    "    story.append(Spacer(1, 20))\n",
-    "    story.append(Paragraph(\"ご来場お待ちしております。\", centered_style))\n",
-    "    story.append(Spacer(1, 20))\n",
+    "    pass\n",
+    "    # story.append(Paragraph(\"残念でした...\", centered_style))\n",
+    "    # story.append(Spacer(1, 20))\n",
+    "    # story.append(Paragraph(\"あなたは残念賞です。\", centered_style))\n",
+    "    # story.append(Spacer(1, 20))\n",
+    "    # story.append(Paragraph(\"ご来場お待ちしております。\", centered_style))\n",
+    "    # story.append(Spacer(1, 20))\n",
     "\n",
     "\n",
     "\n",
@@ -253,18 +257,18 @@
     "text_ex = text_ex.split(\"\t\")\n",
     "\n",
     "\n",
-    "pdfmetrics.registerFont(TTFont(\"HGRGE\", \"C:/Windows/Fonts/HGRGE.TTC\"))\n",
+    "pdfmetrics.registerFont(TTFont(font_name, \"C:/Windows/Fonts/HGRGE.TTC\"))\n",
     "pdfmetrics.registerFont(TTFont(\"HGRME\", \"C:/Windows/Fonts/HGRME.TTC\"))\n",
     "\n",
     "# A4の新規PDFファイルを作成\n",
     "page = canvas.Canvas(\"sample.pdf\", pagesize=portrait(A4))\n",
     "\n",
     "page_center = A4[0]//2\n",
-    "page.setFont(\"HGRGE\", 20)\n",
+    "page.setFont(font_name, 20)\n",
     "\n",
     "page.drawCentredString(page_center, 720, \"あなたへのおすすめは ...\")\n",
     "\n",
-    "page.setFont(\"HGRGE\", 20)\n",
+    "page.setFont(font_name, 20)\n",
     "page.drawCentredString(page_center, 600, text_ex[0])\n",
     "page.drawCentredString(page_center, 500, text_ex[2])\n",
     "\n",
@@ -276,7 +280,7 @@
     "# テキストの開始位置を設定\n",
     "text_object.setTextOrigin(100, 400)\n",
     "# フォントとフォントサイズを設定\n",
-    "text_object.setFont(\"HGRGE\", 10)\n",
+    "text_object.setFont(font_name, 10)\n",
     "# テキストを追加\n",
     "text = text_ex[-1]\n",
     "length = 40\n",
@@ -423,7 +427,7 @@
     "from reportlab.lib.units import cm\n",
     "from reportlab.pdfgen import canvas\n",
     "\n",
-    "pdfmetrics.registerFont(TTFont(\"HGRGE\", \"C:/Windows/Fonts/HGRGE.TTC\"))\n",
+    "pdfmetrics.registerFont(TTFont(font_name, \"C:/Windows/Fonts/HGRGE.TTC\"))\n",
     "pdfmetrics.registerFont(TTFont(\"HGRME\", \"C:/Windows/Fonts/HGRME.TTC\"))\n",
     "\n",
     "def create_pdf(output_path):\n",
@@ -431,7 +435,7 @@
     "    c = canvas.Canvas(output_path, pagesize=A4)\n",
     "\n",
     "    # テキストの追加\n",
-    "    c.setFont(\"HGRGE\", 16)\n",
+    "    c.setFont(font_name, 16)\n",
     "    c.drawString(3*cm, A4[1] - 3*cm, \"あなたへのクイズスタートは...\")\n",
     "\n",
     "    # 円形の図形を追加\n",
