--- a/PDFcreator/app.ipynb
+++ b/PDFcreator/app.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,11 +33,12 @@
     "\n",
     "from PIL import Image as PILImage\n",
     "\n",
+    "global hit_count\n",
     "\n",
     "with open(\"./hit_count.json\", \"r\") as f:\n",
     "    hit_count = json.load(f)[\"count\"]\n",
     "\n",
-    "probability = 0.3\n",
+    "probability = 1\n",
     "max_hit = 100\n",
     "\n",
     "\n",
@@ -54,7 +55,8 @@
     "url_path = \"./image/qr.png\"\n",
     "backgpund_path = \"./image/material_201006_01_white.png\"\n",
     "backgpund_rote_path = \"./image/material_201006_01_white_rotate.png\"\n",
-    "logo_url = \"./image/logo.png\"\n",
+    "logo_path = \"./image/logo.png\"\n",
+    "sealing_path = \"./image/sealing.png\"\n",
     "\n",
     "font_name = \"genshingothic\"\n",
     "font_path = \"./font/genshingothic-20150607/GenShinGothic-Normal.ttf\"\n",
@@ -112,8 +114,19 @@
     "    # どこに配置するかは考える必要がある\n",
     "    canvas.saveState()\n",
     "    canvas.translate(0, 0)\n",
-    "    canvas.drawImage(logo_url, (B5[0]-58.26*3) // 2, 10, width=58.26*3, height=28.74*3)\n",
+    "    canvas.drawImage(logo_path, (B5[0]-58.26*3) // 2, 10, width=58.26*3, height=28.74*3)\n",
     "    canvas.restoreState()\n",
+    "\n",
+    "    # 当選機能の追加 当選の場合はシーリングスタンプを押す\n",
+    "    if random.random() < probability and hit_count < max_hit:\n",
+    "        canvas.saveState()\n",
+    "        canvas.translate(60, B5[1] - 180)\n",
+    "        canvas.rotate(30)\n",
+    "        canvas.drawImage(sealing_path, 0, 0, width=100, height=100)\n",
+    "        canvas.restoreState()\n",
+    "        # hit_count += 1\n",
+    "        # with open(\"./hit_count.json\", \"w\") as f:\n",
+    "        #     json.dump({\"count\": hit_count}, f)\n",
     "\n",
     "\n",
     "story = []\n",
@@ -151,32 +164,6 @@
     "\n",
     "\n",
     "centered_style = get_style(font_name, 20, 20)\n",
-    "\n",
-    "# 当選機能の設定\n",
-    "if random.random() < probability and hit_count < max_hit:\n",
-    "    # 当たりの場合はスタンプを押す\n",
-    "    # story.append(Paragraph(\"おめでとうございます！\", centered_style))\n",
-    "    # story.append(Spacer(1, 10))\n",
-    "    # story.append(Paragraph(\"あなたは当選しました！\", centered_style))\n",
-    "    # story.append(Spacer(1, 10))\n",
-    "    # story.append(Paragraph(\"当選番号は\" + str(random.randint(1, max_hit)) + \"番です！\", centered_style))\n",
-    "    # story.append(Spacer(1, 10))\n",
-    "    # story.append(Paragraph(\"当選番号は入場時に提示してください。\", centered_style))\n",
-    "    # story.append(Spacer(1, 10))\n",
-    "    # story.append(Paragraph(\"ご来場お待ちしております。\", centered_style))\n",
-    "    # story.append(Spacer(1, 20))\n",
-    "    hit_count += 1\n",
-    "    with open(\"./hit_count.json\", \"w\") as f:\n",
-    "        json.dump({\"count\": hit_count}, f)\n",
-    "else:\n",
-    "    pass\n",
-    "    # story.append(Paragraph(\"残念でした...\", centered_style))\n",
-    "    # story.append(Spacer(1, 20))\n",
-    "    # story.append(Paragraph(\"あなたは残念賞です。\", centered_style))\n",
-    "    # story.append(Spacer(1, 20))\n",
-    "    # story.append(Paragraph(\"ご来場お待ちしております。\", centered_style))\n",
-    "    # story.append(Spacer(1, 20))\n",
-    "\n",
     "\n",
     "\n",
     "# ドキュメントに追加\n",
