--- a/printer/app.ipynb
+++ b/printer/app.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    pdffile = \"C:\\\\Users\\\\ron\\Desktop\\\\museum-machikane\\\\printer\\\\print_sample.pdf\"\n",
+    "    pdffile = \"./../PDFcreator/sample.pdf\"\n",
     "    printer_name = \"EW-M571T Series(ネットワーク)\"\n",
     "    main(pdffile, printer_name)"
    ]
