--- a/printer/app.ipynb
+++ b/printer/app.ipynb
@@ -30,19 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"C:\\Program Files\\Adobe\\Acrobat DC\\Acrobat\\Acrobat.exe\" /n /t \"C:\\Users\\ron\\Desktop\\museum-machikane\\printer\\print_sample.pdf\" \"EW-M571T Series(ネットワーク)\"\n"
+      "\"C:\\Program Files\\Adobe\\Acrobat DC\\Acrobat\\Acrobat.exe\" /n /t \"./../PDFcreator/sample.pdf\" \"Brother MFC-L2750DW E302\"\n"
      ]
     }
    ],
    "source": [
-    "import subprocess\n",
+    "import subprocess, winreg\n",
     "\n",
     "# optionの情報　http://scripting.cocolog-nifty.com/blog/2007/07/adobe_reader_81_e41e.html\n",
     "# Startup options\n",
@@ -51,25 +51,35 @@
     "# /o: Launch acrobat without displaying the Open file dialog\n",
     "# /h: Start Acrobat but do not display it (only load it in memory)\n",
     "\n",
+    "def get_acrobat_reader_path():\n",
+    "    key_path = r\"Software\\Microsoft\\Windows\\CurrentVersion\\App Paths\\Acrobat.exe\"\n",
+    "    try:\n",
+    "        with winreg.OpenKey(winreg.HKEY_LOCAL_MACHINE, key_path) as key:\n",
+    "            path, _ = winreg.QueryValueEx(key, None)\n",
+    "            return path\n",
+    "    except FileNotFoundError:\n",
+    "        return None\n",
+    "\n",
     "def main(pdffile, printer_name):\n",
     "    # acroread = r'C:\\Program Files (x86)\\Adobe\\Reader 11.0\\Reader\\AcroRd32.exe'\n",
-    "    acrobat = r'C:\\Program Files\\Adobe\\Acrobat DC\\Acrobat\\Acrobat.exe'\n",
-    "\n",
-    "    # '\"%s\"'is to wrap double quotes around paths\n",
-    "    # as subprocess will use list2cmdline internally if we pass it a list\n",
-    "    # which escapes double quotes and Adobe Reader doesn't like that\n",
+    "    # acrobat = r'C:\\Program Files\\Adobe\\Acrobat DC\\Acrobat\\Acrobat.exe'\n",
+    "    acrobat = get_acrobat_reader_path()\n",
     "\n",
     "    cmd = '\"{}\" /n /t \"{}\" \"{}\"'.format(acrobat, pdffile, printer_name)\n",
+    "    # cmd = '\"{}\" /p /h \"{}\"\"'.format(acrobat, pdffile)\n",
     "    print(cmd)\n",
     "\n",
     "    proc = subprocess.Popen(cmd, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
     "    stdout, stderr = proc.communicate()\n",
     "    exit_code = proc.wait()\n",
     "\n",
+    "    # とりあえずこれでよさそう\n",
+    "    proc.kill()\n",
+    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    pdffile = \"./../PDFcreator/sample.pdf\"\n",
-    "    printer_name = \"EW-M571T Series(ネットワーク)\"\n",
+    "    printer_name = \"Brother MFC-L2750DW E302\"\n",
     "    main(pdffile, printer_name)"
    ]
   }
@@ -90,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
