--- a/PDFcreator/app.ipynb
+++ b/PDFcreator/app.ipynb
@@ -9,12 +9,14 @@
     "# ! pip install reportlab pdfplumber\n",
     "# PDFの場合は左下が原点(0,0)\n",
     "# 参考：https://livelifeulove.hatenablog.com/entry/2016/11/04/python%E3%81%A7ReportLab%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%9FPDF%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB%E3%81%AE%E4%BD%9C%E3%82%8A%E6%96%B9%EF%BC%88%E3%83%81%E3%83%BC%E3%83%88%E7%9A%84%E3%81%AA%EF%BC%89\n",
-    "# 参考："
+    "# 参考：\n",
+    "\n",
+    "# qr作成：https://qr.quel.jp/design.php"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +26,9 @@
     "import random, json\n",
     "\n",
     "from reportlab.lib.pagesizes import B5\n",
+    "from reportlab.lib.units import cm\n",
     "from reportlab.lib.styles import getSampleStyleSheet, ParagraphStyle\n",
-    "from reportlab.platypus import SimpleDocTemplate, Paragraph, Spacer, Image\n",
+    "from reportlab.platypus import SimpleDocTemplate, Paragraph, Spacer, Image, Table\n",
     "from reportlab.lib.enums import TA_CENTER\n",
     "from reportlab.pdfbase import pdfmetrics\n",
     "from reportlab.pdfbase.ttfonts import TTFont\n",
@@ -61,6 +64,8 @@
     "font_name = \"genshingothic\"\n",
     "font_path = \"./font/genshingothic-20150607/GenShinGothic-Normal.ttf\"\n",
     "\n",
+    "x_qr_path = \"./image/qr_x.png\"\n",
+    "instagram_qr_path = \"./image/qr_insta.png\"\n",
     "\n",
     "# フォントの登録\n",
     "pdfmetrics.registerFont(TTFont(font_name, font_path))\n",
@@ -117,12 +122,20 @@
     "    canvas.drawImage(logo_path, (B5[0]-58.26*3) // 2, 10, width=58.26*3, height=28.74*3)\n",
     "    canvas.restoreState()\n",
     "\n",
+    "    # シーリングスタンプの配置\n",
+    "    canvas.saveState()\n",
+    "    canvas.translate(60, B5[1] - 180)\n",
+    "    canvas.rotate(30)\n",
+    "    canvas.drawImage(sealing_path, 0, 0, width=75, height=75)\n",
+    "    canvas.restoreState()\n",
+    "\n",
+    "\n",
     "    # 当選機能の追加 当選の場合はシーリングスタンプを押す\n",
     "    if random.random() < probability and hit_count < max_hit:\n",
     "        canvas.saveState()\n",
-    "        canvas.translate(60, B5[1] - 180)\n",
+    "        canvas.translate(420, B5[1] - 180)\n",
     "        canvas.rotate(30)\n",
-    "        canvas.drawImage(sealing_path, 0, 0, width=100, height=100)\n",
+    "        canvas.drawImage(sealing_path, 0, 0, width=75, height=75)\n",
     "        canvas.restoreState()\n",
     "        # hit_count += 1\n",
     "        # with open(\"./hit_count.json\", \"w\") as f:\n",
@@ -158,13 +171,22 @@
     "img = qr.make_image()\n",
     "img.save(url_path)\n",
     "\n",
-    "story.append(Image(url_path, width=100, height=100))\n",
+    "# 展示url, twitter, instagramのqrを配置\n",
     "\n",
-    "story.append(Spacer(1, 40))\n",
+    "# 3つの画像とテキストのリストを作成します\n",
+    "image_paths = [url_path, x_qr_path, instagram_qr_path]\n",
+    "image_captions = [\"展示url\", \"X(twitter)\", \"instagram\"]\n",
     "\n",
+    "# Image オブジェクトのリストと、それに対応するキャプションのリストを作成します\n",
+    "images = [Image(img_path, width=4*cm, height=4*cm) for img_path in image_paths]\n",
+    "styles = getSampleStyleSheet()\n",
+    "captions = [Paragraph(text, get_style(font_name, 10, 10)) for text in image_captions]\n",
     "\n",
-    "centered_style = get_style(font_name, 20, 20)\n",
+    "# Table を使って画像とキャプションを配置します\n",
+    "data = [images, captions]\n",
+    "table = Table(data, colWidths=[4.5*cm]*3)\n",
     "\n",
+    "story.append(table)\n",
     "\n",
     "# ドキュメントに追加\n",
     "doc.build(story, onFirstPage=background_image, onLaterPages=background_image)\n"
