search_database.pyをmoduleに移動

--- a/printer/app.ipynb
+++ b/printer/app.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -62,8 +62,8 @@
     "\n",
     "def main(pdffile, printer_name):\n",
     "    # acroread = r'C:\\Program Files (x86)\\Adobe\\Reader 11.0\\Reader\\AcroRd32.exe'\n",
-    "    # acrobat = r'C:\\Program Files\\Adobe\\Acrobat DC\\Acrobat\\Acrobat.exe'\n",
-    "    acrobat = get_acrobat_reader_path()\n",
+    "    acrobat = r'C:\\Program Files\\Adobe\\Acrobat DC\\Acrobat\\Acrobat.exe'\n",
+    "    #acrobat = get_acrobat_reader_path()\n",
     "\n",
     "    cmd = '\"{}\" /n /t \"{}\" \"{}\"'.format(acrobat, pdffile, printer_name)\n",
     "    # cmd = '\"{}\" /p /h \"{}\"\"'.format(acrobat, pdffile)\n",
@@ -79,7 +79,7 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    pdffile = \"./../PDFcreator/sample.pdf\"\n",
-    "    printer_name = \"Brother MFC-L2750DW E302\"\n",
+    "    printer_name = \"Brother MFC-L2750DW_kanemoto\"\n",
     "    main(pdffile, printer_name)"
    ]
   }
