--- a/communicate_with_unity/app.ipynb
+++ b/communicate_with_unity/app.ipynb
@@ -85,6 +85,83 @@
     "\n",
     "print(a())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "こんにちは！私はAIアシスタントです。\n",
+      "\n",
+      "私はオープンAIが開発したAIで、ユーザーの質問に回答したり、タスクを支援したりすることができます。私の目的は、ユーザーのニーズに合わせて役立つ情報やサポートを提供することです。\n",
+      "\n",
+      "私は自然言語処理技術を使っており、様々なトピックに関する知識を持っています。旅行や料理、科学、文化、歴史など、さまざまな分野についての質問に答えることができます。\n",
+      "\n",
+      "私は24時間365日稼働しているため、いつでも質問やお手伝いをすることができます。お気軽にどんな質問でもしてください。よろしくお願いします！"
+     ]
+    }
+   ],
+   "source": [
+    "# chatgptのstream処理を試す\n",
+    "import openai\n",
+    "from openai.embeddings_utils import cosine_similarity\n",
+    "import os,json\n",
+    "\n",
+    "# .envファイルから環境変数を読み込む\n",
+    "from dotenv import load_dotenv\n",
+    "dotenv_path = '../.env'\n",
+    "load_dotenv(dotenv_path)\n",
+    "\n",
+    "def chat(message):\n",
+    "    messages = [\n",
+    "        {\"role\": \"user\", \"content\": message}\n",
+    "    ]\n",
+    "\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        model=\"gpt-3.5-turbo\",\n",
+    "        messages=messages,\n",
+    "        stream=True,\n",
+    "    )\n",
+    "\n",
+    "    response_text = \"\"\n",
+    "    for chunk in response:\n",
+    "        if chunk:\n",
+    "            content = chunk['choices'][0]['delta'].get('content')\n",
+    "            if content:\n",
+    "                response_text += content\n",
+    "                yield content\n",
+    "\n",
+    "messages = []\n",
+    "for talk in chat('こんにちは。自己紹介してください。'):\n",
+    "    print(talk, end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(\"./audio/test.wav\", mode=\"rb\") as f:\n",
+    "    audio = f.read()\n",
+    "\n",
+    "type(audio) == bytes"
+   ]
   }
  ],
  "metadata": {
