community with unity

--- a/communicate_with_unity/app.ipynb
+++ b/communicate_with_unity/app.ipynb
@@ -162,6 +162,102 @@
     "\n",
     "type(audio) == bytes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prams: _wave_params(nchannels=2, sampwidth=2, framerate=44100, nframes=173754, comptype='NONE', compname='not compressed')\n",
+      "Sampling rate: 44100\n",
+      "Frame num: 173754\n",
+      "Sec: 3.94\n",
+      "Samplewidth: 2\n",
+      "Channel num: 2\n",
+      "[ 30930 -20417  32767 ...   -205    281    325]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import wave\n",
+    "import numpy as np\n",
+    "from numpy import frombuffer\n",
+    "\n",
+    "\n",
+    "readfilename = \"./audio/test.wav\"\n",
+    "writefilename = \"./audio/tmp.wav\"\n",
+    "with wave.open(readfilename, \"rb\") as wr:\n",
+    "    # data information\n",
+    "    params = wr.getparams()\n",
+    "    print(\"Prams:\", params)\n",
+    "    ch_num, sampwidth, fr, frame_num, comptype, compname = params\n",
+    "    print(\"Sampling rate:\", fr)\n",
+    "    print(\"Frame num:\", frame_num)\n",
+    "    print(\"Sec:\", frame_num / fr)\n",
+    "    print(\"Samplewidth:\", sampwidth)\n",
+    "    print(\"Channel num:\", ch_num)\n",
+    "    # read wavedata as binary format\n",
+    "\n",
+    "    binary_data = wr.readframes(wr.getnframes())\n",
+    "    # convert bibary to numpy array\n",
+    "    if sampwidth == 2:\n",
+    "        width_dtype = \"int16\"\n",
+    "    elif sampwidth == 4:\n",
+    "        width_dtype = \"int32\"\n",
+    "    num_data = frombuffer(binary_data, dtype = width_dtype)\n",
+    "    print(num_data)\n",
+    "\n",
+    "# write wavefiles\n",
+    "with wave.open(writefilename, \"wb\") as ww:\n",
+    "    ww.setparams(params)\n",
+    "    #convert numpy arrays to binary format\n",
+    "    write_binary_data = num_data.tobytes()\n",
+    "    ww.writeframes(binary_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([2, 2, 44100, 173754, 'NONE', 'not compressed'])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params._asdict().values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_wave_params(nchannels=2, sampwidth=2, framerate=44100, nframes=173754, comptype='NONE', compname='not compressed')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wave._wave_params(*params._asdict().values())"
+   ]
   }
  ],
  "metadata": {
@@ -180,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
