--- a/communicate_with_unity/app.ipynb
+++ b/communicate_with_unity/app.ipynb
@@ -258,6 +258,30 @@
    "source": [
     "wave._wave_params(*params._asdict().values())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bytes'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ファイルをバイナリモードで開く\n",
+    "readfilename = \"./audio/test.wav\"\n",
+    "with open(readfilename, 'rb') as file:\n",
+    "    # ファイルの内容を読み込む\n",
+    "    binary_data = file.read()\n",
+    "\n",
+    "# binary_dataにはwavファイルのバイナリデータが格納されています。\n",
+    "print(type(binary_data))"
+   ]
   }
  ],
  "metadata": {
