--- a/speech_recognition/test.ipynb
+++ b/speech_recognition/test.ipynb
@@ -47,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ドラえもんについて知りたいです\n"
+     ]
+    }
+   ],
    "source": [
     "# API経由のwhisperのテスト\n",
     "import os\n",
@@ -66,8 +74,18 @@
     "\n",
     "import openai\n",
     "\n",
+    "# ファイルをバイナリモードで開く\n",
+    "input_path = \"./audio/test.wav\"\n",
+    "output_path = \"./audio/temp.wav\"\n",
+    "with open(input_path, 'rb') as file:\n",
+    "    # ファイルの内容を読み込む\n",
+    "    binary_data = file.read()\n",
+    "\n",
+    "with open(output_path, 'wb') as file:\n",
+    "    file.write(binary_data)\n",
+    "\n",
     "openai.api_key = OPENAI_API_KEY\n",
-    "audio_file= open(\"./audio/audio.wav\", \"rb\")\n",
+    "audio_file = open(\"./audio/temp.wav\", \"rb\")\n",
     "transcript = openai.Audio.transcribe(\"whisper-1\", audio_file, language=\"ja\")\n",
     "print(transcript[\"text\"])"
    ]
