--- a/database/creat_database_2024.ipynb
+++ b/database/creat_database_2024.ipynb
@@ -83,7 +83,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "387\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(other_japan_list))\n",
+    "print(len(all_kansai_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +131,7 @@
     "        'name': doc[2],\n",
     "        'raw': doc,\n",
     "        'embedding_text': text,\n",
-    "        # 'embedding': res['data'][0]['embedding']\n",
+    "        'embedding': res['data'][0]['embedding']\n",
     "    })\n",
     "\n",
     "with open('embedding_kansai.json', 'w', encoding=\"utf8\") as f:\n",
@@ -122,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +162,7 @@
     "        'name': doc[2],\n",
     "        'raw': doc,\n",
     "        'embedding_text': text,\n",
-    "        # 'embedding': res['data'][0]['embedding']\n",
+    "        'embedding': res['data'][0]['embedding']\n",
     "    })\n",
     "\n",
     "with open('embedding_all.json', 'w', encoding=\"utf8\") as f:\n",
